--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "next": "^15",
     "next-auth": "^5.0.0-beta.30",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.6.0",
     "tailwind-merge": "^2.3.0",
